# gaborboosting

./: ProjectHome.md
GaborBoosting/src/ClientBasedFaceReg/: Makefile.am  Makefile.in  Training.cpp
GaborBoosting/src/Gender/: Makefile.am
GaborBoosting/src/PCA/: Makefile.am
GaborBoosting/src/Segmentation/: Makefile.am  Makefile.in
trunk/GaborBoosting/: Doxyfile  Makefile  Makefile.in  adaboostgabortraining.kdevelop  adaboostgabortraining.kdevelop.pcs  adaboostgabortraining.kdevses  config.status  configure  configure.in  libtool
trunk/GaborBoosting/GaborBoosting/: adaboostgabortraining.kdevelop  adaboostgabortraining.kdevelop.pcs  adaboostgabortraining.kdevses  configure
trunk/GaborBoosting/GaborBoosting/autom4te.cache/: output.0  traces.0  traces.1
trunk/GaborBoosting/GaborBoosting/debug/: Makefile  config.status
trunk/GaborBoosting/GaborBoosting/debug/src/: Makefile
trunk/GaborBoosting/GaborBoosting/optimized/: Makefile  config.status
trunk/GaborBoosting/GaborBoosting/optimized/src/: Makefile
trunk/GaborBoosting/GaborBoosting/src/: DataGen.cpp  GaborTest.cpp  MutInformation.cpp  PoolPartition.cpp  cvadaboost.h  cvbinarytrainingdata.h  cventropy.cpp  cvfacedb.cpp  cvferet.h  cvgaborfeature.h  cvgaborfeaturepool.h  cvgaborresponsedata.h  cvmultitrainingdata.cpp  cvmweaklearner.cpp  cvpcafacereg.cpp  cvtrainingdata.cpp  cvtrainingdata.h  cvweaklearner.h  findMutInf.cpp
trunk/GaborBoosting/GaborBoosting/src/Gender/: genderdetecting.cpp
trunk/GaborBoosting/GaborBoosting/src/MultiClassification/: minandupdate.cpp
trunk/GaborBoosting/GaborBoosting/src/PCA/: Makefile.am  pcatraining.cpp
trunk/GaborBoosting/GaborBoosting/src/Segmentation/: cvfacesegment.cpp
trunk/GaborBoosting/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/GaborBoosting/debug/: Makefile  config.status  feature_0_1.txt  libtool
trunk/GaborBoosting/debug/src/: FindMutInf  GaborProcess  GaborTesting  Makefile  MutInf  PairPoolPartition  adaboostgabortesting  adaboostgabortraining  adaboostgabortraining.M1  cvgaborfeature.loT  prepare  sign2weaks  testFERET  trainFERET
trunk/GaborBoosting/debug/src/.deps/: DataGen.Po  GaborTest.Po  MatUsage.Po  MutInformation.Po  PoolPartition.Po  adaboostgabor.M1.Po  adaboostgabortesting.Po  adaboostgabortraining.Po  cv2bins.Po  cvadaboost.Po  cvadaboostfeatureselection.Po  cvbin.Po  cvbinarytrainingdata.Po  cvbindiffgabadafeatureselect.Po  cventropy.Po  cvfacedb.Po  cvferet.Po  cvgabadafeatureselect.Po  cvgabor.Po  cvgabordifferencedatamaker.Po  cvgaborfeature.Po  cvgaborfeaturepair.Po  cvgaborfeaturepairpool.Po  cvgaborfeaturepairselect.Po  cvgaborfeaturepool.Po  cvgaborresponsedata.Po  cvknnweaklearner.Po  cvlookuptable.Po  cvmultigabadafeatureselect.Po  cvmultigabadafsm1.Po  cvmultitrainingdata.Po  cvmutinf.Po  cvmweaklearner.Po  cvpcafacereg.Po  cvpoolparams.Plo  cvpoolparams.Po  cvsubject.Po  cvtestingdata.Po  cvtrainingdata.Plo  cvtrainingdata.Po  (+6 more)
trunk/GaborBoosting/debug/src/AdaBoost/: Makefile
trunk/GaborBoosting/debug/src/ClientBasedFaceReg/: Makefile
trunk/GaborBoosting/debug/src/Gender/: Gendertesting  Makefile  genderdetect
trunk/GaborBoosting/debug/src/IntraExtraFaceReg/: Makefile  Training
trunk/GaborBoosting/debug/src/MultiClassification/: KnnFaceReog  Makefile  Recognition  SVMFaceRecog  allfeaturetraining
trunk/GaborBoosting/debug/src/PCA/: Makefile  PCAtraining
trunk/GaborBoosting/debug/src/Segmentation/: FaceSegment  Makefile  resizeferet
trunk/GaborBoosting/optimized/: Makefile  config.h  config.status  libtool
trunk/GaborBoosting/optimized/src/: GaborProcess  GaborTesting  Makefile  MutInf  PairPoolPartition  adaboostgabortesting  adaboostgabortraining  adaboostgabortraining.M1  prepare  sign2weaks  testFERET
trunk/GaborBoosting/src/: CommonCVFunction.h  DataGen.cpp  GaborBoosting.h  GaborProcess  GaborTest.cpp  Makefile  Makefile.am  Makefile.in  MatUsage.cpp  MatUsage.h  MutInf  PairPoolPartition  PoolPartition.cpp  PrepareData.h  adaboostgabortesting  adaboostgabortesting.cpp  adaboostgabortraining  adaboostgabortraining.M1  adaboostgabortraining.cpp  cv2bins.cpp  cvadaboost.cpp  cvadaboostfeatureselection.cpp  cvadaboostfeatureselection.h  cvbin.cpp  cvbin.h  cvbinarytrainingdata.cpp  cvbindiffgabadafeatureselect.cpp  cvbindiffgabadafeatureselect.h  cvbingabadafeatureselect.cpp  cvbingabadafeatureselect.h  cvfacedb.cpp  cvfacedb.h  cvfacesvmclassifier.cpp  cvfacesvmclassifier.h  cvfacesvmdiffclassifier.cpp  cvferet.cpp  cvferet.h  cvgabadafeatureselect.cpp  cvgabadafeatureselect.h  cvgabor.cpp  (+50 more)
trunk/GaborBoosting/src/.deps/: DataGen.Po  MatUsage.Po  MutInformation.Po  PoolPartition.Po  adaboostgabor.M1.Po  adaboostgabortesting.Po  adaboostgabortraining.Po  cv2bins.Po  cvadaboost.Po  cvbinarytrainingdata.Po  cventropy.Po  cvfacedb.Po  cvferet.Po  cvgabadafeatureselect.Po  cvgaborfeature.Po  cvgaborfeaturepair.Po  cvgaborfeaturepairpool.Po  cvgaborfeaturepairselect.Po  cvgaborfeaturepool.Po  cvlookuptable.Po  cvmultigabadafeatureselect.Po  cvmultigabadafsm1.Po  cvmultitrainingdata.Po  cvmutinf.Po  cvmweaklearner.Po  cvpoolparams.Po  cvweaklearner.Po  makingfeaturedata.Po  prepare.Po  sign2weaks.Po
trunk/GaborBoosting/src/AdaBoost/: Makefile.am  Makefile.in  svm_test.cpp
trunk/GaborBoosting/src/BinFaceReg/: Makefile.am  facetraining.cpp
trunk/GaborBoosting/src/ClientBasedFaceReg/: FeatureSelection.cpp  Makefile.am  Makefile.in  Training.cpp
trunk/GaborBoosting/src/Gender/: Gendertesting.cpp  Makefile.in
trunk/GaborBoosting/src/IntraExtraFaceReg/: FaceFeatureSelection.cpp  FaceTesting.cpp  FaceTraining.cpp  FaceTraining.cpp.mine  Makefile.am  Makefile.in
trunk/GaborBoosting/src/MultiClassification/: FaceRecog.cpp  Makefile  Makefile.am  Makefile.in  allfeaturetraining  allfeaturetraining.cpp  knnFaceRecog.cpp  svmFaceRecog.cpp
trunk/GaborBoosting/src/PCA/: Makefile.in  pcatesting.cpp  pcatraining.cpp
trunk/GaborBoosting/src/Segmentation/: FaceSeg.cpp  FaceSegment  Makefile  Makefile.am  Makefile.in  cvfacesegment.h  resize.cpp
trunk/GaborBoosting/templates/: h
(+391 files in other folders)
